<resources>
    <string name="app_name">ThinkIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_structure">자료구조</string>
    <string name="algorithm">알고리즘</string>
    <string name="operating_system">운영체제</string>
    <string name="database">데이터베이스</string>
    <string name="network">네트워크</string>
    <string name="feedback">피드백</string>
    <string name="button_close">닫기</string>

    <string name="concept_fragment">Concept Fragment</string>
    <string name="quiz_fragment">Quiz Fragment</string>
    <string name="keywords_fragment">Keywords Fragment</string>
    <string name="explanation_web_view_fragment">Explanation WebView Fragment</string>
    <string name="job_concept_fragment">Job Concept Fragment</string>
    <string name="my_page_fragment">My Page Fragment</string>

    <string name="ai">인공지능</string>
    <string name="computer_structure">컴퓨터 구조</string>
    <string name="android">안드로이드</string>
    <string name="spring">스프링</string>
    <string name="underlineLogIn"><u>회원가입</u></string>

    <color name="gray">#FFBDBDBD</color>
    <color name="light_gray">#FFEFEFEF</color>
    <color name="dark_gray">#FF212121</color>
</resources>